nginx (1.22.1-3) UNRELEASED; urgency=medium

  * d/control: added Multi-Arch: foreign for package nginx-dev

 -- Jan Mojžíš <jan.mojzis@gmail.com>  Fri, 02 Dec 2022 00:30:39 +0100

nginx (1.22.1-2) unstable; urgency=medium

  [ Jan Mojžíš ]
  * d/control: fixed spelling-error-in-description
  * d/nginx-*.postinst: fixed postinst script, used invoke-rc.d instead of
    pidof and ad-hoc tests, tnx Gioele Barabucci
  * d/tests/ssi-module-test added, simple ngx_http_ssi_filter_module test
  * d/p/bug-1024605.patch added: fixes problem when a subrequest has SSI
    enabled but its main request does not, the SSI module may crash the worker
    due to NULL-pointer dereference. The patch is backported from the upstream
    (Closes: 1024605)
  * d/control: updated implicit dependencies of third-party modules
    for easier transition to third-party modules in separate packages.

  [ Jérémy Lal ]
  * d/debhelper: set nginx_mod buildsystem by default
  * d/control: nginx-dev provides dh-sequence-nginx (Closes: #1024879)
  * d/control: remove Uploaders that are part of nginx-team,
    keep only the most recent active one, per policy 5.6.3.

  [ Debian Janitor ]
  * Remove constraints unnecessary since buster (oldstable):
    + nginx-dev: Drop versioned constraint on dpkg-dev in Depends.

 -- Jan Mojžíš <jan.mojzis@gmail.com>  Wed, 30 Nov 2022 17:39:42 +0100

nginx (1.22.1-1) unstable; urgency=medium

  [ Jan Mojžíš ]
  * New upstream version 1.22.1
  * d/control: added implicit version of dependency libnginx-mod-http-lua
    (>=1:0.10.22-3~), it is a rebuilt version with nginx 1.22.1.
  * Added libnginx-mod-http-lua powerpc architecture

  [ Debian Janitor ]
  * Fix day-of-week for changelog entry 0.5.11-1.

 -- Jan Mojžíš <jan.mojzis@gmail.com>  Thu, 10 Nov 2022 18:21:43 +0100

nginx (1.22.0-3.1) unstable; urgency=medium

  * Non-maintainer upload.
  * No source change upload to rebuild with debhelper 13.10.
