@@ -201,8 +201,14 @@ config.arch.%:
 	cp -Pa $(CURDIR)/man $(BUILDDIR_$*)/
 	cd $(BUILDDIR_$*) && ./configure $($*_configure_flags)
 	if [ "$(BUILDDIR_$*)" = "$(BUILDDIR_extras)" ]; then \
-	  have="NDK_SET_VAR"; \
-	  /bin/echo -e "#ifndef $$have\n#define $$have  1\n#endif" >> $(BUILDDIR_$*)/objs/ngx_auto_config.h; \
+	  for have in NDK_SET_VAR NDK_UPSTREAM_LIST; do \
+	    ( \
+	      echo "#ifndef $$have"; \
+	      echo "#define $$have 1"; \
+	      echo "#endif"; \
+	      echo; \
+	    ) >> $(BUILDDIR_$*)/objs/ngx_auto_config.h; \
+	  done \
 	fi
 
 config.src:
