@@ -1,6 +1,7 @@
 nginx (1.22.1-3) UNRELEASED; urgency=medium
 
   * d/control: added Multi-Arch: foreign for package nginx-dev
+  * d/rules: enabled NDK upstream list module NDK_UPSTREAM_LIST
 
  -- Jan Mojžíš <jan.mojzis@gmail.com>  Fri, 02 Dec 2022 00:30:39 +0100
 
